// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HAvatar > render correctly with caption 1`] = `
"<figure class="h-avatar h-avatar--size-colossal h-avatar--behavior-default"><img src="/src/assets/images/avatar_male.svg" class="h-avatar__image">
  <figcaption class="h-avatar__figcaption">My caption</figcaption>
</figure>"
`;

exports[`HAvatar > render correctly with default props 1`] = `
"<figure class="h-avatar h-avatar--size-colossal h-avatar--behavior-default"><img src="/src/assets/images/avatar_male.svg" class="h-avatar__image">
  <!--v-if-->
</figure>"
`;
